# 2021_20Sample

./: .gitignore  README.md
aws_sample/: translate_command_list.py  translate_speech.py
aws_sample/command_lists/: command_list_sample.txt
camera_speech/: CMakeLists.txt  package.xml
camera_speech/launch/: camera_speech.launch
camera_speech/scripts/: camera_speech.py
